// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runner delay works when the initial render is delayed 1`] = `
<p>
  initial render
</p>
`;

exports[`runner delay works with multiple delayed renders 1`] = `
<p>
  second render
</p>
`;

exports[`runner renders works for empty sagas 1`] = `""`;

exports[`runner renders works for multiple initial renders 1`] = `
<p>
  third initial render
</p>
`;

exports[`runner renders works for single renders 1`] = `
<p>
  initial render
</p>
`;

exports[`runner take props works with changing props 1`] = `
<p>
  Hello 
  bob
</p>
`;

exports[`runner take props works with changing props 2`] = `
<p>
  Hello 
  robert
</p>
`;

exports[`runner take props works with initial props 1`] = `
<p>
  Hello 
  nick
</p>
`;
